--- a/index.html
+++ b/index.html
@@ -7,15 +7,25 @@
         <script defer type="text/javascript" src="obfu.js"></script>
         <style>
             table {
-                color: #888888;
+                color: #ffffff;
                 font-size: 11px;
                 text-align: center;
                 margin: 0px auto 5px auto;
-                border: 1px solid #000000;
+                border: 1px solid #ffffff;
+            }
+
+            .wrap {
+                height: 100vh;
+                width: 100%;
+            }
+
+            html {
+                font-size: 18px;
+
             }
 
             body {
-                background: #333333;
+                background: #000000;
                 color: #000000;
                 font-family: Verdana;
                 font-size: 11px;
@@ -29,11 +39,14 @@
                 width: 600px;
                 font-family: Verdana;
                 border: 1px solid #000000;
-                color: #AAAAAA;
+                color: #e6e6e6;
                 font-size: 11px;
-                background: #444444;
+                background: #0c0c0c;
                 display: inline;
                 margin: 0px;
+                resize: vertical;
+                padding: 5px;
+                font: 1.5em sans-serif;
             }
 
             .noir {
